objects/Vehicle_Interest__c.object
<CustomObject>
    <fields>
        <fullName>AWD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AWD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicle Interest</relationshipLabel>
        <relationshipName>Vehicle_Interest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Transmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transmission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sunroof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunroof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Truck</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Coupe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vehicle Interest</label>
    <nameField>
        <label>Vehicle Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>